# serializer version: 1
# name: test_round_trip_calibration_program[cz]
  '''
  DEFCAL CZ 110 111:
      FENCE
      NONBLOCKING PULSE 110 111 "cz" q110_q111_cz/CZ
      DELAY 110 "rf" 1.6e-7
      SHIFT-PHASE 110 "rf" 0.6
      DELAY 111 "rf" 1.6e-7
      SHIFT-PHASE 111 "rf" 0.4
      FENCE
      SHIFT-PHASE 110 111 "xy" 0.3
      SHIFT-PHASE 110 117 "xy" 0.3
      SHIFT-PHASE 110 111 "xy" -0.2
      SHIFT-PHASE 111 112 "xy" -0.2
      SHIFT-PHASE 111 126 "xy" -0.2
  DEFCAL CZ 111 110:
      FENCE
      NONBLOCKING PULSE 110 111 "cz" q110_q111_cz/CZ
      DELAY 110 "rf" 1.6e-7
      SHIFT-PHASE 110 "rf" 0.6
      DELAY 111 "rf" 1.6e-7
      SHIFT-PHASE 111 "rf" 0.4
      FENCE
      SHIFT-PHASE 110 111 "xy" 0.3
      SHIFT-PHASE 110 117 "xy" 0.3
      SHIFT-PHASE 110 111 "xy" -0.2
      SHIFT-PHASE 111 112 "xy" -0.2
      SHIFT-PHASE 111 126 "xy" -0.2
  
  '''
# ---
# name: test_round_trip_calibration_program[cz_cphase]
  '''
  DEFCAL CZ 110 111:
      FENCE
      NONBLOCKING PULSE 110 111 "cz" q110_q111_cz/CZ
      DELAY 110 "rf" 1.6e-7
      SHIFT-PHASE 110 "rf" 0.6
      DELAY 111 "rf" 1.6e-7
      SHIFT-PHASE 111 "rf" 0.4
      FENCE
      SHIFT-PHASE 110 111 "xy" 0.3
      SHIFT-PHASE 110 117 "xy" 0.3
      SHIFT-PHASE 110 111 "xy" -0.2
      SHIFT-PHASE 111 112 "xy" -0.2
      SHIFT-PHASE 111 126 "xy" -0.2
  DEFCAL CZ 111 110:
      FENCE
      NONBLOCKING PULSE 110 111 "cz" q110_q111_cz/CZ
      DELAY 110 "rf" 1.6e-7
      SHIFT-PHASE 110 "rf" 0.6
      DELAY 111 "rf" 1.6e-7
      SHIFT-PHASE 111 "rf" 0.4
      FENCE
      SHIFT-PHASE 110 111 "xy" 0.3
      SHIFT-PHASE 110 117 "xy" 0.3
      SHIFT-PHASE 110 111 "xy" -0.2
      SHIFT-PHASE 111 112 "xy" -0.2
      SHIFT-PHASE 111 126 "xy" -0.2
  DEFCAL CPHASE(%theta) 110 111:
      FENCE
      NONBLOCKING PULSE 110 111 "cphase" q110_q111_cphase/sqrtCPHASE
      SHIFT-PHASE 110 111 "cphase" -1.2+(0.5*%theta)
      NONBLOCKING PULSE 110 111 "cphase" q110_q111_cphase/sqrtCPHASE
      SHIFT-PHASE 110 111 "cphase" -1*(-1.2+(0.5*%theta))
      DELAY 110 "rf" 3.2e-7
      SHIFT-PHASE 110 "rf" 2.2
      DELAY 111 "rf" 3.2e-7
      SHIFT-PHASE 111 "rf" 1.2
      FENCE
      SHIFT-PHASE 110 111 "xy" 1.1
      SHIFT-PHASE 110 117 "xy" 1.1
      SHIFT-PHASE 110 111 "xy" -0.6
      SHIFT-PHASE 111 112 "xy" -0.6
      SHIFT-PHASE 111 126 "xy" -0.6
  DEFCAL CPHASE(%theta) 111 110:
      FENCE
      NONBLOCKING PULSE 110 111 "cphase" q110_q111_cphase/sqrtCPHASE
      SHIFT-PHASE 110 111 "cphase" -1.2+(0.5*%theta)
      NONBLOCKING PULSE 110 111 "cphase" q110_q111_cphase/sqrtCPHASE
      SHIFT-PHASE 110 111 "cphase" -1*(-1.2+(0.5*%theta))
      DELAY 110 "rf" 3.2e-7
      SHIFT-PHASE 110 "rf" 2.2
      DELAY 111 "rf" 3.2e-7
      SHIFT-PHASE 111 "rf" 1.2
      FENCE
      SHIFT-PHASE 110 111 "xy" 1.1
      SHIFT-PHASE 110 117 "xy" 1.1
      SHIFT-PHASE 110 111 "xy" -0.6
      SHIFT-PHASE 111 112 "xy" -0.6
      SHIFT-PHASE 111 126 "xy" -0.6
  
  '''
# ---
# name: test_round_trip_calibration_program[measure]
  '''
  DEFCAL MEASURE 0 addr:
  	FENCE 0
  	DECLARE q0_unclassified REAL[2]
  	PULSE 0 "rf_f12" gaussian(detuning: 0, duration: 6e-8, fwhm: 1.6e-8, phase: 0, scale: 0.5, t0: 3e-8)
  	NONBLOCKING PULSE 0 "ro_tx" flat(detuning: 0, duration: 1.6e-6, iq: 1, phase: 0, scale: 0.1)
  	NONBLOCKING CAPTURE 0 "ro_rx" boxcar_kernel(detuning: 0, duration: 1.6e-6, phase: 0, scale: 1) q0_unclassified[0]
  	PRAGMA FILTER-NODE q0_unclassified "{'module':'standard.filters.io','filter_type':'DataBuffer','source':'q0_ro_rx/filter','publish':true,'params':{},'_type':'FilterNode'}"
  	PRAGMA LOAD-MEMORY q0_unclassified "q0_unclassified[0]"
  	PRAGMA FILTER-NODE q0_classified "{'module':'standard.filters.classifiers','filter_type':'SingleQLinear','source':'q0_ro_rx/filter','publish':false,'params':{'a':[1.0,0.0],'threshold':0.01},'_type':'FilterNode'}"
  	PRAGMA FILTER-NODE q0 "{'module':'standard.filters.io','filter_type':'DataBuffer','source':'q0_classified','publish':true,'params':{},'_type':'FilterNode'}"
  	PRAGMA LOAD-MEMORY q0 "addr"
  	FENCE 0
  
  DEFCAL MEASURE 10 addr:
  	FENCE 10
  	DECLARE q10_unclassified REAL[2]
  	PULSE 10 "rf_f12" gaussian(detuning: 0, duration: 7e-8, fwhm: 1.7e-8, phase: 0, scale: 0.5, t0: 3e-8)
  	NONBLOCKING PULSE 10 "ro_tx" flat(detuning: 0, duration: 1.6e-6, iq: 1, phase: 0, scale: 0.1)
  	NONBLOCKING CAPTURE 10 "ro_rx" boxcar_kernel(detuning: 0, duration: 1.6e-6, phase: 0, scale: 1) q10_unclassified[0]
  	PRAGMA FILTER-NODE q10_unclassified "{'module':'standard.filters.io','filter_type':'DataBuffer','source':'q10_ro_rx/filter','publish':true,'params':{},'_type':'FilterNode'}"
  	PRAGMA LOAD-MEMORY q10_unclassified "q10_unclassified[0]"
  	PRAGMA FILTER-NODE q10_classified "{'module':'standard.filters.classifiers','filter_type':'SingleQLinear','source':'q10_ro_rx/filter','publish':false,'params':{'a':[1.0,0.0],'threshold':0.01},'_type':'FilterNode'}"
  	PRAGMA FILTER-NODE q10 "{'module':'standard.filters.io','filter_type':'DataBuffer','source':'q10_classified','publish':true,'params':{},'_type':'FilterNode'}"
  	PRAGMA LOAD-MEMORY q10 "addr"
  	FENCE 10
  
  DEFCAL MEASURE 100 addr:
  	FENCE 100
  	DECLARE q100_unclassified REAL[2]
  	PULSE 100 "rf_f12" gaussian(detuning: 0, duration: 8e-8, fwhm: 1.8e-8, phase: 0, scale: 0.5, t0: 3e-8)
  	NONBLOCKING PULSE 100 "ro_tx" flat(detuning: 0, duration: 1.6e-6, iq: 1, phase: 0, scale: 0.1)
  	NONBLOCKING CAPTURE 100 "ro_rx" boxcar_kernel(detuning: 0, duration: 1.6e-6, phase: 0, scale: 1) q100_unclassified[0]
  	PRAGMA FILTER-NODE q100_unclassified "{'module':'standard.filters.io','filter_type':'DataBuffer','source':'q100_ro_rx/filter','publish':true,'params':{},'_type':'FilterNode'}"
  	PRAGMA LOAD-MEMORY q100_unclassified "q100_unclassified[0]"
  	PRAGMA FILTER-NODE q100_classified "{'module':'standard.filters.classifiers','filter_type':'SingleQLinear','source':'q10_ro_rx/filter','publish':false,'params':{'a':[1.0,0.0],'threshold':0.01},'_type':'FilterNode'}"
  	PRAGMA FILTER-NODE q100 "{'module':'standard.filters.io','filter_type':'DataBuffer','source':'q100_classified','publish':true,'params':{},'_type':'FilterNode'}"
  	PRAGMA LOAD-MEMORY q100 "addr"
  	FENCE 100
  
  
  '''
# ---
# name: test_round_trip_calibration_program[rx]
  '''
  DEFCAL RX(pi/2) 0:
      FENCE 0
      NONBLOCKING PULSE 0 "rf" drag_gaussian(alpha: -0.1, anh: -100000000, detuning: 0, duration: 1e-8, fwhm: 1e-8, phase: 0, scale: 0.1, t0: 1e-8)
      FENCE 0
  DEFCAL RX(-pi/2) 0:
      FENCE 0
      NONBLOCKING PULSE 0 "rf" drag_gaussian(alpha: -0.2, anh: -100000000, detuning: 0, duration: 1e-8, fwhm: 1e-8, phase: 0, scale: 0.2, t0: 1e-8)
      FENCE 0
  DEFCAL RX(pi) 0:
      FENCE 0
      NONBLOCKING PULSE 0 "rf" drag_gaussian(alpha: -0.3, anh: -100000000, detuning: 0, duration: 1e-8, fwhm: 1e-8, phase: 0, scale: 0.3, t0: 1e-8)
      FENCE 0
  DEFCAL RX(-pi) 0:
      FENCE 0
      NONBLOCKING PULSE 0 "rf" drag_gaussian(alpha: -0.4, anh: -100000000, detuning: 0, duration: 1e-8, fwhm: 1e-8, phase: 0, scale: 0.4, t0: 1e-8)
      FENCE 0
  DEFCAL RX(pi/2) 3:
      FENCE 3
      NONBLOCKING PULSE 3 "rf" drag_gaussian(alpha: -0.1, anh: -100000000, detuning: 0, duration: 2e-8, fwhm: 1e-8, phase: 0, scale: 0.1, t0: 1e-8)
      FENCE 3
  DEFCAL RX(-pi/2) 3:
      FENCE 3
      NONBLOCKING PULSE 3 "rf" drag_gaussian(alpha: -0.2, anh: -100000000, detuning: 0, duration: 2e-8, fwhm: 1e-8, phase: 0, scale: 0.2, t0: 1e-8)
      FENCE 3
  DEFCAL RX(pi) 3:
      FENCE 3
      NONBLOCKING PULSE 3 "rf" drag_gaussian(alpha: -0.3, anh: -100000000, detuning: 0, duration: 2e-8, fwhm: 1e-8, phase: 0, scale: 0.3, t0: 1e-8)
      FENCE 3
  DEFCAL RX(-pi) 3:
      FENCE 3
      NONBLOCKING PULSE 3 "rf" drag_gaussian(alpha: -0.4, anh: -100000000, detuning: 0, duration: 2e-8, fwhm: 1e-8, phase: 0, scale: 0.4, t0: 1e-8)
      FENCE 3
  
  '''
# ---
# name: test_round_trip_calibration_program[xy]
  '''
  DEFCAL XY(%theta) 110 111:
      FENCE
      SHIFT-PHASE 110 111 "xy" 0.4
      NONBLOCKING PULSE 110 111 "xy" q110_q111_xy/sqrtiSWAP
      SHIFT-PHASE 110 111 "xy" -0.4
      SHIFT-PHASE 110 111 "xy" 1.8+(-0.5*%theta)
      NONBLOCKING PULSE 110 111 "xy" q110_q111_xy/sqrtiSWAP
      SHIFT-PHASE 110 111 "xy" -1*(1.8+(-0.5*%theta))
      DELAY 110 "rf" 1.2e-7
      SHIFT-PHASE 110 "rf" 0.8
      DELAY 111 "rf" 1.2e-7
      SHIFT-PHASE 111 "rf" 0.4
      SHIFT-PHASE 111 "rf" 0.5*%theta
      SHIFT-PHASE 110 "rf" -0.5*%theta
      FENCE
      SHIFT-PHASE 110 111 "xy" 0.4
      SHIFT-PHASE 110 117 "xy" 0.4
      SHIFT-PHASE 110 111 "xy" -0.2
      SHIFT-PHASE 111 112 "xy" -0.2
      SHIFT-PHASE 111 126 "xy" -0.2
      SHIFT-PHASE 110 111 "xy" -0.25*%theta
      SHIFT-PHASE 111 112 "xy" -0.25*%theta
      SHIFT-PHASE 111 126 "xy" -0.25*%theta
      SHIFT-PHASE 110 111 "xy" -0.25*%theta
      SHIFT-PHASE 110 117 "xy" -0.25*%theta
  DEFCAL XY(%theta) 111 110:
      FENCE
      SHIFT-PHASE 110 111 "xy" 0.4
      NONBLOCKING PULSE 110 111 "xy" q110_q111_xy/sqrtiSWAP
      SHIFT-PHASE 110 111 "xy" -0.4
      SHIFT-PHASE 110 111 "xy" 1.8+(-0.5*%theta)
      NONBLOCKING PULSE 110 111 "xy" q110_q111_xy/sqrtiSWAP
      SHIFT-PHASE 110 111 "xy" -1*(1.8+(-0.5*%theta))
      DELAY 110 "rf" 1.2e-7
      SHIFT-PHASE 110 "rf" 0.8
      DELAY 111 "rf" 1.2e-7
      SHIFT-PHASE 111 "rf" 0.4
      SHIFT-PHASE 111 "rf" 0.5*%theta
      SHIFT-PHASE 110 "rf" -0.5*%theta
      FENCE
      SHIFT-PHASE 110 111 "xy" 0.4
      SHIFT-PHASE 110 117 "xy" 0.4
      SHIFT-PHASE 110 111 "xy" -0.2
      SHIFT-PHASE 111 112 "xy" -0.2
      SHIFT-PHASE 111 126 "xy" -0.2
      SHIFT-PHASE 110 111 "xy" -0.25*%theta
      SHIFT-PHASE 111 112 "xy" -0.25*%theta
      SHIFT-PHASE 111 126 "xy" -0.25*%theta
      SHIFT-PHASE 110 111 "xy" -0.25*%theta
      SHIFT-PHASE 110 117 "xy" -0.25*%theta
  
  '''
# ---
